# helios-operator

./: .env.example  .gitmodules  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml  run_program.yml  rust.yml
contracts/: genesis.json
elf/: riscv32im-succinct-zkvm-elf  sp1-helios-elf
genesis/: genesis.json
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml  build.rs
script/src/: lib.rs
