[workspace]
members = ["primitives", "script"]
resolver = "2"


[workspace.package]
license = "MIT"
edition = "2021"
authors = ["0xSasaPrsic"]

[workspace.dependencies]
# sp1-helios
sp1-helios-primitives = { path = "primitives" }

# helios
# todo add release versions of the helios
helios = { git = "https://github.com/a16z/helios", rev = "d4b5cea6d63cb89366fc12ed265040a9720a9c86" }
helios-consensus-core = { git = "https://github.com/a16z/helios", rev = "d4b5cea6d63cb89366fc12ed265040a9720a9c86" }
helios-ethereum = { git = "https://github.com/a16z/helios", rev = "d4b5cea6d63cb89366fc12ed265040a9720a9c86" }

# general
dotenv = "0.15.0"
sp1-sdk = "4.0.0"
sp1-build = "4.0.0"
tokio = "1.38.0"
serde = "1.0.203"
url = { version = "2.5.2", features = ["serde"] }

serde_cbor = "0.11.2"
hex = "0.4.3"
serde_json = "1.0.125"
alloy-sol-types = "0.8.21"
clap = "4.5.9"
log = "0.4.22"
env_logger = "0.11.3"
alloy-primitives = { version = "0.8.21", features = ["serde"] }
alloy = { version = "0.1.1", features = ["full"] }
anyhow = "1.0.86"
reqwest = "0.12.5"
tree_hash = "0.9.1"
cargo_metadata = "0.18"

avail-rust = { git = "https://github.com/availproject/avail.git", rev = "305e82ef4d5b758e7046050c5ad11eae1ce7ad94" }
jsonrpsee = { version = "0.20", features = ["http-client", "macros", "async-client"] }
sp-core = { version = "21.0.0" }

[patch.crates-io]
sha2-v0-9-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.9.9-sp1-4.0.0" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", tag = "patch-0.8.0-sp1-4.0.0" }
# From upstream: https://github.com/a16z/helios/blob/master/Cargo.toml#L115
ethereum_hashing = { git = "https://github.com/ncitron/ethereum_hashing", rev = "7ee70944ed4fabe301551da8c447e4f4ae5e6c35" }
